  * [Paddington] preserve release date hh:mm in "Edit Releases"
  * [Roland] Added eval magic in install-ldap.sh to help debugging.
    "export DEBSFDEBUG=1" will disable all the redirections, thus showing
    the STDOUT and STDERR of all commands.
  * [Roland] Added extra columns (use_ftp, use_tracker, use_frs,
    use_stats, enable_pserver, enable_anoncvs) in the groups table.

 -- Roland Mas <lolando@debian.org>  Fri, 25 Oct 2002 19:31:28 +0200

sourceforge (2.6-0+13) experimental; urgency=low

  * [Christian] Added a dump and restore option to install-db.sh
  * [Christian] Added themeable main page support
  * [Christian] Rewritting of trove_getcatlisting function to
    return a string instead of direct printing
  * [Christian] you can choose default language in local.inc with
    e.g. $sys_lang='French';
  * [Roland] Added the files necessary for sourceforge-mta-postfix.  Yay!
    Our first try at flexibility!  Don't get any funny ideas though, I'm
    pretty confident it doesn't work.  Yet.
  * [Roland] [From 2.5] Changed the way we empty the LDAP directory, so as
    not to kill entries that are not ours.
  * [Roland] [From 2.5] Fixed last inserted languages.
  * [Soon-Son] added group write permission (0664) when creating the
    val-tags file in the CVSROOT directory of each project. Old
    configuration (0644) caused an error when the user tries to tag it as
    follows:
    $cvs up -r xterm-branch
    cvs [server aborted]: cannot write /cvsroot/[...]/CVSROOT/val-tags:
    Permission denied
  * [Roland] [From 2.5] New install-ldap.sh.  Should help killing our LDAP
    problems.  Still waiting for more testing, but it seems to mostly
    work.  There's still a bug in it, but it should be fairly simple to
    fix and I'm working on it.
  * [Roland] Various other cleanings in install-ldap.sh.
  * [Roland] Fixed dependencies of the packages.  Not as if it were really
    important before multi-host installations are officially supported,