@@ -393,7 +393,9 @@ class Group extends Error {
 	 */
 	function update(&$user, $group_name,$homepage,$short_description,$use_mail,$use_survey,$use_forum,
 		$use_pm,$use_pm_depend_box,$use_cvs,$use_news,$use_docman,
-		$new_task_address,$send_all_tasks,$logo_image_id) {
+		$new_task_address,$send_all_tasks,$logo_image_id,
+		$enable_pserver,$enable_anoncvs,
+		$use_ftp,$use_tracker,$use_frs,$use_stats) {
 
 		$perm =& $this->getPermission($user);
 
@@ -447,6 +449,24 @@ class Group extends Error {
 		if (!$send_all_tasks) {
 			$send_all_tasks=0;
 		}
+		if (!$enable_pserver) {
+			$enable_pserver=0;
+		}
+		if (!$enable_anoncvs) {
+			$enable_anoncvs=0;
+		}
+		if (!$use_ftp) {
+			$use_ftp=0;
+		}
+		if (!$use_tracker) {
+			$use_tracker=0;
+		}
+		if (!$use_frs) {
+			$use_frs=0;
+		}
+		if (!$use_stats) {
+			$use_stats=0;
+		}
 
 		if (!$homepage) {
 			$homepage='http://'.$GLOBALS['sys_default_domain'].'/projects/'.$this->getUnixName().'/';
@@ -457,6 +477,7 @@ class Group extends Error {
 			return false;
 		}
 
+		//XXX not yet actived logo_image_id='$logo_image_id', 
 		$res = db_query("
 			UPDATE groups
 			SET 
@@ -472,9 +493,13 @@ class Group extends Error {
 				use_news='$use_news',
 				use_docman='$use_docman',
 				new_task_address='$new_task_address',
-				send_all_tasks='$send_all_tasks'".
-// XXX: not active yet
-//				logo_image_id='$logo_image_id' 
+				send_all_tasks='$send_all_tasks',
+				enable_pserver='$enable_pserver',
+				enable_anoncvs='$enable_anoncvs',
+				use_ftp='$use_ftp',
+				use_tracker='$use_tracker',
+				use_frs='$use_frs',
+				use_stats='$use_stats'".
 			"
 			WHERE group_id='".$this->getID()."'
 		");
@@ -699,6 +724,15 @@ class Group extends Error {
 	}
 
 	/**
+	 *  getRegisterPurpose()
+	 *
+	 *  @return text description
+	 */
+	function getRegisterPurpose() {
+		return $this->data_array['register_purpose'];
+	}
+
+	/**
 	 *  getDescription()
 	 *
 	 *  @return text description
@@ -785,6 +819,24 @@ class Group extends Error {
 	*/
 
 	/**
+	 *	enableAnonCVS() - whether or not this group has opted to enable Anonymous CVS
+	 *
+	 *	@return true/false
+	 */
+	function enableAnonCVS() {
+		return $this->data_array['enable_anoncvs'];
+	}
+
+	/**
+	 *	enablePserver() - whether or not this group has opted to enable Pserver
+	 *
+	 *	@return true/false
+	 */
+	function enablePserver() {
+		return $this->data_array['enable_pserver'];
+	}
+
+	/**
 	 *	usesCVS() - whether or not this group has opted to use CVS
 	 *
 	 *	@return true/false
@@ -821,12 +873,48 @@ class Group extends Error {
 	}	   
 
 	/**
+	 *  usesStats() - whether or not this group has opted to use stats
+	 *
+	 *  @return true/false
+	 */
+	function usesStats() {
+		return $this->data_array['use_stats'];
+	}
+
+	/**
+	 *  usesFRS() - whether or not this group has opted to use file release system
+	 *
+	 *  @return true/false
+	 */
+	function usesFRS() {
+		return $this->data_array['use_frs'];
+	}
+
+	/**
+	 *  usesTracker() - whether or not this group has opted to use tracker
+	 *
+	 *  @return true/false
+	 */
+	function usesTracker() {
+		return $this->data_array['use_tracker'];
+	}
+
+	/**
 	 *  usesDocman() - whether or not this group has opted to use docman
 	 *
 	 *  @return true/false
 	 */
 	function usesDocman() {
 		return $this->data_array['use_docman'];
+	}
+
+	/**
+	 *  usesFTP() - whether or not this group has opted to use FTP
+	 *
+	 *  @return true/false
+	 */
+	function usesFTP() {
+		return $this->data_array['use_ftp'];
 	}
 
 	/**
